improved the user experience

--- a/src/stlye.css
+++ b/src/stlye.css
@@ -1,7 +1,9 @@
 body {
   background-image: url("https://images.pexels.com/photos/5710181/pexels-photo-5710181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-  background-size: cover;
   background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
@@ -20,13 +22,16 @@ h2 {
   background-color: rgba(255, 255, 251, 0.7);
   margin: 80px auto;
   max-width: 800px;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
-form {
-  padding: 30px;
+.form-container {
+  padding: 30px 30px 5px 30px;
   border-radius: 10px;
+}
+
+form {
   display: flex;
 }
 
@@ -34,23 +39,40 @@ form {
   padding: 10px;
   border: 1px solid rgba(223, 223, 223, 0.702);
   width: 70%;
-  border-radius: 10px;
+  border-radius: 15px;
   line-height: 20px;
   font-size: 18px;
   color: #757779;
 }
 .button {
   margin-left: 20px;
-  background-color: rgb(121, 143, 62, 0.8);
-  border-radius: 10px;
+  background-color: rgb(121, 143, 62, 0.6);
+  border-radius: 20px;
   padding: 14px;
   font-size: 18px;
   border: none;
   color: white;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .button:hover {
   cursor: pointer;
+}
+
+.hint {
+  opacity: 0.7;
+
+  margin-left: 40px;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
+.blink {
+  animation: blink 2s step-start 0s infinite;
+  opacity: 0.7;
 }
 
 .recipe {
